# repo-setup

./: .ansible-lint  .ci-operator.yaml  .gitignore  .pre-commit-config.yaml  OWNERS  README.md  README.rst  galaxy.yml  repo_setup  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: toxjobs.yml
doc/source/: conf.py  index.rst  installation.rst
docs/: get_hash.md  yum_config.md
molecule/default/: converge.yml
playbooks/: build_test_packages.yaml  example_get_hash.yaml  example_yum_config.yaml
plugins/module_utils/repo_setup/: main.py  utils.py
plugins/module_utils/repo_setup_repos/: main.py  utils.py
plugins/modules/: get_hash.py  yum_config.py
releasenotes/notes/: stream_by_default-783cc6a2208b942c.yaml
roles/: build-test-packages  repo-setup
roles/build-test-packages/: README.md
roles/build-test-packages/defaults/: main.yml
roles/build_test_packages/: README.md
roles/build_test_packages/defaults/: main.yml
roles/build_test_packages/meta/: main.yml
roles/build_test_packages/tasks/: main.yml
roles/repo-setup/: README.md
roles/repo-setup/defaults/: main.yml
roles/repo-setup/tasks/: create-repo-script.yml  get-dlrn-hash-newest.yml  get-dlrn-hash.yml  get-hash-set-fact-no-collections.yml  get-hash-set-fact.yml  yum-config-compose.yml
roles/repo_setup/: README.md
roles/repo_setup/tasks/: get-dlrn-hash-newest.yml  get-hash-set-fact-no-collections.yml  get-hash-set-fact.yml  yum-config-compose-no-collections.yml  yum-config-generic-no-collections.yml  (+1 more)
tests/sanity/: ignore-2.11.txt
zuul.d/: jobs.yaml  projects.yaml
(+30 files in other folders)
