[metadata]
name = repo-setup
summary = A tool for managing repo_setup.repos
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/repo-setup-docs/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    repo_setup
data_files =
    etc/repo_setup_get_hash/ = repo_setup/get_hash/config.yaml
    share/ansible/plugins/modules/ = plugins/modules/*
    share/ansible/plugins/module_utils/ = plugins/module_utils/*

[entry_points]
console_scripts =
    repo-setup = repo_setup.main:main
    repo-setup-yum-config = repo_setup.yum_config.__main__:cli_entrypoint
    repo-setup-get-hash = repo_setup.get_hash.__main__:cli_entrypoint

[pbr]
skip_authors = True
skip_changelog = True
